--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Transient exception handling",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests"
+    "test": "mocha tests",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
