--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.1.3",
-    "mocha": "^2.3.2"
+    "mocha": "^2.3.2",
+    "request-promise": "^0.4.3"
   }
 }
