--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Transient exception handling",
   "main": "src/polly.js",
   "scripts": {
-    "test": "mocha tests",
-    "test:watch": "npm test -- --watch"
+    "test": "istanbul cover ./node_modules/mocha/bin/_mocha tests",
+    "test:watch": "mocha tests --watch",
+    "report-coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/codecov"
   },
   "repository": {
     "type": "git",
@@ -29,8 +30,10 @@
   "devDependencies": {
     "chai": "^3.3.0",
     "chai-as-promised": "^5.1.0",
+    "codecov.io": "^0.1.6",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.1.3",
+    "istanbul": "^0.3.21",
     "mocha": "^2.3.2",
     "request-promise": "^0.4.3"
   }
