--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
   },
   "homepage": "https://github.com/mauricedb/polly-js#readme",
   "devDependencies": {
-    "chai": "^3.3.0",
-    "chai-as-promised": "^5.1.0",
-    "codecov.io": "^0.1.6",
-    "gulp": "^3.9.0",
-    "gulp-mocha": "^2.1.3",
-    "istanbul": "^0.4.1",
-    "mocha": "^2.3.2",
-    "request-promise": "^3.0.0"
+    "chai": "3.3.0",
+    "chai-as-promised": "5.1.0",
+    "codecov.io": "0.1.6",
+    "gulp": "3.9.0",
+    "gulp-mocha": "2.1.3",
+    "istanbul": "0.4.1",
+    "mocha": "2.3.2",
+    "request-promise": "3.0.0"
   }
 }
